# AsteroidFinder

./: .gitignore  README.md  pyproject.toml  ztf.py
asteroidfinder/: __init__.py  alignment.py  astrometry_quality.py  calibration.py  cli.py  detection.py  diagnostics.py  doctor.py  ephemeris.py  io.py  known_objects.py  mpc.py  outputs.py  photometry.py  platesolve.py  report.py  tracking.py  wcs.py  workflow.py
asteroidfinder_desktop/: __init__.py  macos_bundle.py  main.py  main_window.py  session.py  viewer.py  workers.py
demo/: README.md  run_demo.py
demo2/: README.md  run_demo2.py
docs/: desktop_ui_plan.md
tests/: test_desktop_session.py  test_io_detection_tracking.py
